新增商品 接口（不包括新增商品描述）

--- a/gateway/src/main/resources/static/html/item-add.html
+++ b/gateway/src/main/resources/static/html/item-add.html
@@ -112,7 +112,9 @@
 		//$("#itemAddForm").serialize()将表单序列号为key-value形式的字符串
 		$.post("/item/save",$("#itemAddForm").serialize(), function(data){
 			if(data.status == 200){
-				$.messager.alert('提示','新增商品成功!');
+				$.messager.alert('提示',data.result);
+			} else {
+				$.messager.alert('提示','新增商品失败')
 			}
 		});
 	}
