修改url以对应架构路由网关设置

--- a/gateway/src/main/resources/static/html/item-edit.html
+++ b/gateway/src/main/resources/static/html/item-edit.html
@@ -99,7 +99,7 @@
 		
 		$("#itemeEditForm [name=itemParams]").val(paramJson);
 		
-		$.post("/rest/item/update",$("#itemeEditForm").serialize(), function(data){
+		$.post("/item/update",$("#itemeEditForm").serialize(), function(data){
 			if(data.status == 200){
 				$.messager.alert('提示','修改商品成功!','info',function(){
 					$("#itemEditWindow").window('close');
