查询规格参数分页列表

--- a/gateway/src/main/resources/static/html/item-param-list.html
+++ b/gateway/src/main/resources/static/html/item-param-list.html
@@ -1,4 +1,4 @@
-<table class="easyui-datagrid" id="itemParamList" title="商品列表"
+<table class="easyui-datagrid" id="itemParamList" title="规格参数模板列表"
        data-options="singleSelect:false,collapsible:true,pagination:true,url:'/item/param/list',method:'get',pageSize:30,toolbar:itemParamListToolbar">
     <thead>
         <tr>
@@ -6,16 +6,15 @@
         	<th data-options="field:'id',width:60">ID</th>
         	<th data-options="field:'itemCatId',width:80">商品类目ID</th>
         	<th data-options="field:'itemCatName',width:100">商品类目</th>
-            <th data-options="field:'paramData',width:300,formatter:formatItemParamData">规格(只显示分组名称)</th>
+            <th data-options="field:'paramData',width:300,formatter:formatItemParamData">规格组</th>
             <th data-options="field:'created',width:130,align:'center',formatter:TAOTAO.formatDateTime">创建日期</th>
             <th data-options="field:'updated',width:130,align:'center',formatter:TAOTAO.formatDateTime">更新日期</th>
         </tr>
     </thead>
 </table>
-<div id="itemEditWindow" class="easyui-window" title="编辑商品" data-options="modal:true,closed:true,iconCls:'icon-save',href:'/item-edit'" style="width:80%;height:80%;padding:10px;">
-</div>
 <script>
 
+    <!--  只显示规格组的名称，并用逗号隔开; -->
 	function formatItemParamData(value , index){
 		var json = JSON.parse(value);
 		var array = [];
@@ -25,6 +24,7 @@
 		return array.join(",");
 	}
 
+	<!--  获取用户选中的规格参数的id -->
     function getSelectionsIds(){
     	var itemList = $("#itemParamList");
     	var sels = itemList.datagrid("getSelections");
