--- a/gateway/src/main/resources/static/html/item-add.html
+++ b/gateway/src/main/resources/static/html/item-add.html
@@ -113,6 +113,7 @@
 		$.post("/item/save",$("#itemAddForm").serialize(), function(data){
 			if(data.status == 200){
 				$.messager.alert('提示',data.result);
+				clearForm();
 			} else {
 				$.messager.alert('提示','新增商品失败')
 			}
