新增商品类目的规格模板

--- a/gateway/src/main/resources/static/html/item-param-add.html
+++ b/gateway/src/main/resources/static/html/item-param-add.html
@@ -1,104 +1,121 @@
 <table cellpadding="5" style="margin-left: 30px" id="itemParamAddTable" class="itemParam">
-	<tr>
-		<td>商品类目:</td>
-		<td><a href="javascript:void(0)" class="easyui-linkbutton selectItemCat">选择类目</a> 
-			<input type="hidden" name="cid" style="width: 280px;"></input>
-		</td>
-	</tr>
-	<tr class="hide addGroupTr">
-		<td>规格参数:</td>
-		<td>
-			<ul>
-				<li><a href="javascript:void(0)" class="easyui-linkbutton addGroup">添加分组</a></li>
-			</ul>
-		</td>
-	</tr>
-	<tr>
-		<td></td>
-		<td>
-			<a href="javascript:void(0)" class="easyui-linkbutton submit">提交</a>
-	    	<a href="javascript:void(0)" class="easyui-linkbutton close">关闭</a>
-		</td>
-	</tr>
+    <tr>
+        <td>商品类目:</td>
+        <td><a href="javascript:void(0)" class="easyui-linkbutton selectItemCat">选择类目</a>
+            <input type="hidden" name="cid" style="width: 280px;"></input>
+        </td>
+    </tr>
+    <tr class="hide addGroupTr">
+        <td>规格模板:</td>
+        <td>
+            <ul>
+                <li><a href="javascript:void(0)" class="easyui-linkbutton addGroup">添加规格组</a></li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>
+            <a href="javascript:void(0)" class="easyui-linkbutton submit">提交</a>
+            <a href="javascript:void(0)" class="easyui-linkbutton close">关闭</a>
+        </td>
+    </tr>
 </table>
-<div  class="itemParamAddTemplate" style="display: none;">
-	<li class="param">
-		<ul>
-			<li>
-				<input class="easyui-textbox" style="width: 150px;" name="group"/>&nbsp;<a href="javascript:void(0)" class="easyui-linkbutton addParam"  title="添加参数" data-options="plain:true,iconCls:'icon-add'"></a>
-			</li>
-			<li>
-				<span>|-------</span><input  style="width: 150px;" class="easyui-textbox" name="param"/>&nbsp;<a href="javascript:void(0)" class="easyui-linkbutton delParam" title="删除" data-options="plain:true,iconCls:'icon-cancel'"></a>						
-			</li>
-		</ul>
-	</li>
+<div class="itemParamAddTemplate" style="display: none;">
+    <li class="param">
+        <ul>
+            <li>
+                <input class="easyui-textbox" style="width: 150px;" name="group"/>&nbsp;<a href="javascript:void(0)"
+                                                                                           class="easyui-linkbutton addParam"
+                                                                                           title="添加规格项"
+                                                                                           data-options="plain:true,iconCls:'icon-add'"></a>
+            </li>
+            <li>
+                <span>|-------</span><input style="width: 150px;" class="easyui-textbox" name="param"/>&nbsp;<a
+                    href="javascript:void(0)" class="easyui-linkbutton delParam" title="删除"
+                    data-options="plain:true,iconCls:'icon-cancel'"></a>
+            </li>
+        </ul>
+    </li>
 </div>
 <script style="text/javascript">
-	$(function(){
-		TAOTAO.initItemCat({
-			fun:function(node){
-			$(".addGroupTr").hide().find(".param").remove();
-				//  判断选择的目录是否已经添加过规格
-			  $.getJSON("/item/param/query/itemcatid/" + node.id,function(data){
-				  if(data.status == 200 && data.data){
-					  $.messager.alert("提示", "该类目已经添加，请选择其他类目。", undefined, function(){
-						 $("#itemParamAddTable .selectItemCat").click();
-					  });
-					  return ;
-				  }
-				  $(".addGroupTr").show();
-			  });
-			}
-		});
-		
-		$(".addGroup").click(function(){
-			  var temple = $(".itemParamAddTemplate li").eq(0).clone();
-			  $(this).parent().parent().append(temple);
-			  temple.find(".addParam").click(function(){
-				  var li = $(".itemParamAddTemplate li").eq(2).clone();
-				  li.find(".delParam").click(function(){
-					  $(this).parent().remove();
-				  });
-				  li.appendTo($(this).parentsUntil("ul").parent());
-			  });
-			  temple.find(".delParam").click(function(){
-				  $(this).parent().remove();
-			  });
-		 });
-		
-		$("#itemParamAddTable .close").click(function(){
-			$(".panel-tool-close").click();
-		});
-		
-		$("#itemParamAddTable .submit").click(function(){
-			var params = [];
-			var groups = $("#itemParamAddTable [name=group]");
-			groups.each(function(i,e){
-				var p = $(e).parentsUntil("ul").parent().find("[name=param]");
-				var _ps = [];
-				p.each(function(_i,_e){
-					var _val = $(_e).siblings("input").val();
-					if($.trim(_val).length>0){
-						_ps.push(_val);						
-					}
-				});
-				var _val = $(e).siblings("input").val();
-				if($.trim(_val).length>0 && _ps.length > 0){
-					params.push({
-						"group":_val,
-						"params":_ps
-					});					
-				}
-			});
-			var url = "/item/param/save/"+$("#itemParamAddTable [name=cid]").val();
-			$.post(url,{"paramData":JSON.stringify(params)},function(data){
-				if(data.status == 200){
-					$.messager.alert('提示','新增商品规格成功!',undefined,function(){
-						$(".panel-tool-close").click();
-    					$("#itemParamList").datagrid("reload");
-    				});
-				}
-			});
-		});
-	});
+    $(function () {
+        //调用common.js的初始化类目选择方法，并传入参数
+        TAOTAO.initItemCat({
+            fun: function (node) {
+                //将之前打开的添加规格组隐藏掉，并将规格项清空
+                $(".addGroupTr").hide().find(".param").remove();
+                //  判断选择的类目是否已经添加过规格模板
+                $.getJSON("/item/param/query/itemcatid/" + node.id, function (data) {
+                    if (data.status == 200) {
+                        //如果添加过模板，弹框提示用户，并执行点击“选择类目”事件
+                        $.messager.alert("提示", data.result, undefined, function () {
+                            $("#itemParamAddTable .selectItemCat").click();
+                        });
+                        return;
+                    }
+                    //如果该类目没有添加过规格模板，显示添加规格组一栏
+                    $(".addGroupTr").show();
+                });
+            }
+        });
+
+        //添加规格组点击事件
+        $(".addGroup").click(function () {
+            var temple = $(".itemParamAddTemplate li").eq(0).clone();
+            $(this).parent().parent().append(temple);
+            //添加规格项点击事件
+            temple.find(".addParam").click(function () {
+                var li = $(".itemParamAddTemplate li").eq(2).clone();
+                li.find(".delParam").click(function () {
+                    $(this).parent().remove();
+                });
+                li.appendTo($(this).parentsUntil("ul").parent());
+            });
+            //删除规格项点击事件
+            temple.find(".delParam").click(function () {
+                $(this).parent().remove();
+            });
+        });
+
+        $("#itemParamAddTable .close").click(function () {
+            $(".panel-tool-close").click();
+        });
+
+        //提交编辑好的规格模板
+        $("#itemParamAddTable .submit").click(function () {
+            //生成json数据的过程
+            var params = [];
+            var groups = $("#itemParamAddTable [name=group]");
+            groups.each(function (i, e) {
+                var p = $(e).parentsUntil("ul").parent().find("[name=param]");
+                var _ps = [];
+                p.each(function (_i, _e) {
+                    var _val = $(_e).siblings("input").val();
+                    if ($.trim(_val).length > 0) {
+                        _ps.push(_val);
+                    }
+                });
+                var _val = $(e).siblings("input").val();
+                if ($.trim(_val).length > 0 && _ps.length > 0) {
+                    params.push({
+                        "group": _val,
+                        "params": _ps
+                    });
+                }
+            });
+            //发ajax请求存储编辑好的规格模板，参数为cid和paramData
+            //其中cid在url中，paramData被转换为了json字符串
+            var url = "/item/param/save";
+            var param = {"paramData": JSON.stringify(params), "cid": $("#itemParamAddTable [name=cid]").val()};
+            $.post(url, param, function (data) {
+                if (data.status == 200) {
+                    $.messager.alert('提示', data.result, undefined, function () {
+                        $(".panel-tool-close").click();
+                        $("#itemParamList").datagrid("reload");
+                    });
+                }
+            });
+        });
+    });
 </script>
