--- a/gateway/src/main/resources/static/html/item-param-add.html
+++ b/gateway/src/main/resources/static/html/item-param-add.html
@@ -2,7 +2,7 @@
     <tr>
         <td>商品类目:</td>
         <td><a href="javascript:void(0)" class="easyui-linkbutton selectItemCat">选择类目</a>
-            <input type="hidden" name="cid" style="width: 280px;"></input>
+            <input type="hidden" name="cid" style="width: 280px;"/>
         </td>
     </tr>
     <tr class="hide addGroupTr">
@@ -32,7 +32,7 @@
             </li>
             <li>
                 <span>|-------</span><input style="width: 150px;" class="easyui-textbox" name="param"/>&nbsp;<a
-                    href="javascript:void(0)" class="easyui-linkbutton delParam" title="删除"
+                    href="javascript:void(0)" class="easyui-linkbutton delParam" title="删除规格项"
                     data-options="plain:true,iconCls:'icon-cancel'"></a>
             </li>
         </ul>
