编辑商品--获取商品规格参数信息

--- a/gateway/src/main/resources/static/html/item-edit.html
+++ b/gateway/src/main/resources/static/html/item-edit.html
@@ -79,6 +79,7 @@
 		itemEditEditor.sync();
 		
 		var paramJson = [];
+		//生成json数据的过程
 		$("#itemeEditForm .params li").each(function(i,e){
 			var trs = $(e).find("tr");
 			var group = trs.eq(0).text();
