--- a/gateway/src/main/resources/static/html/item-list.html
+++ b/gateway/src/main/resources/static/html/item-list.html
@@ -117,7 +117,7 @@
         	    	var params = {"ids":ids};
                 	$.post("/item/delete",params, function(data){
             			if(data.status == 200){
-            				$.messager.alert('提示','删除商品成功!',undefined,function(){
+            				$.messager.alert('提示',data.data,undefined,function(){
             					$("#itemList").datagrid("reload");
             				});
             			}
