--- a/gateway/src/main/resources/static/html/item-edit.html
+++ b/gateway/src/main/resources/static/html/item-edit.html
@@ -99,10 +99,10 @@
 		paramJson = JSON.stringify(paramJson);
 		
 		$("#itemeEditForm [name=itemParams]").val(paramJson);
-		
+
 		$.post("/item/update",$("#itemeEditForm").serialize(), function(data){
 			if(data.status == 200){
-				$.messager.alert('提示','修改商品成功!','info',function(){
+				$.messager.alert('提示',data.data,'info',function(){
 					$("#itemEditWindow").window('close');
 					$("#itemList").datagrid("reload");
 				});
