--- a/gateway/src/main/resources/static/html/item-list.html
+++ b/gateway/src/main/resources/static/html/item-list.html
@@ -112,7 +112,7 @@
         		$.messager.alert('提示','未选中商品!');
         		return ;
         	}
-        	$.messager.confirm('确认','确定删除ID为 '+ids+' 的商品吗？',function(r){
+        	$.messager.confirm('确认','确定删除选中商品吗？',function(r){
         	    if (r){
         	    	var params = {"ids":ids};
                 	$.post("/item/delete",params, function(data){
@@ -134,12 +134,12 @@
         		$.messager.alert('提示','未选中商品!');
         		return ;
         	}
-        	$.messager.confirm('确认','确定下架ID为 '+ids+' 的商品吗？',function(r){
+        	$.messager.confirm('确认','确定下架选中商品吗？',function(r){
         	    if (r){
         	    	var params = {"ids":ids};
                 	$.post("/item/instock",params, function(data){
             			if(data.status == 200){
-            				$.messager.alert('提示','下架商品成功!',undefined,function(){
+            				$.messager.alert('提示',data.data,undefined,function(){
             					$("#itemList").datagrid("reload");
             				});
             			}
@@ -156,12 +156,12 @@
         		$.messager.alert('提示','未选中商品!');
         		return ;
         	}
-        	$.messager.confirm('确认','确定上架ID为 '+ids+' 的商品吗？',function(r){
+        	$.messager.confirm('确认','确定上架选中商品吗？',function(r){
         	    if (r){
         	    	var params = {"ids":ids};
                 	$.post("/item/reshelf",params, function(data){
             			if(data.status == 200){
-            				$.messager.alert('提示','上架商品成功!',undefined,function(){
+            				$.messager.alert('提示',data.data,undefined,function(){
             					$("#itemList").datagrid("reload");
             				});
             			}
