--- a/gateway/src/main/resources/static/html/item-add.html
+++ b/gateway/src/main/resources/static/html/item-add.html
@@ -93,7 +93,7 @@
 		取商品的规格
 		 */
 		var paramJson = [];
-		//将规格参数信息转换为json对象
+		//将规格参数信息转换为json对象（如果没有规格模板，就会添加一个空数组）
 		$("#itemAddForm .params li").each(function(i,e){
 			var trs = $(e).find("tr");
 			var group = trs.eq(0).text();
