--- a/gateway/src/main/resources/static/html/item-edit.html
+++ b/gateway/src/main/resources/static/html/item-edit.html
@@ -79,7 +79,7 @@
 		itemEditEditor.sync();
 		
 		var paramJson = [];
-		//生成json数据的过程
+		//将规格参数信息转换为json对象（如果没有规格模板，就会添加一个空数组）
 		$("#itemeEditForm .params li").each(function(i,e){
 			var trs = $(e).find("tr");
 			var group = trs.eq(0).text();
