--- a/gateway/src/main/resources/static/html/index.html
+++ b/gateway/src/main/resources/static/html/index.html
@@ -3,81 +3,101 @@
 <!--  注意：只有这个页面是一个完整的HTML页面，其他页面都是属于本页面的一部分 -->
 <!--  所以，在这里导入的css和js文件可以被其它页面所共享，不用重复导入！-->
 <head>
-<meta charset=UTF-8">
-<title>K-商城后台管理系统</title>
-<link rel="stylesheet" type="text/css" href="js/jquery-easyui-1.4.1/themes/default/easyui.css" />
-<link rel="stylesheet" type="text/css" href="js/jquery-easyui-1.4.1/themes/icon.css" />
-<link rel="stylesheet" type="text/css" href="css/taotao.css" />
-<script type="text/javascript" src="js/jquery-easyui-1.4.1/jquery.min.js"></script>
-<script type="text/javascript" src="js/jquery-easyui-1.4.1/jquery.easyui.min.js"></script>
-<script type="text/javascript" src="js/jquery-easyui-1.4.1/locale/easyui-lang-zh_CN.js"></script>
-<script type="text/javascript" src="js/common.js"></script>
-<style type="text/css">
-	.content {
-		padding: 10px 10px 10px 10px;
-	}
-</style>
+    <meta charset=UTF-8">
+    <title>K-商城后台管理系统</title>
+    <link rel="stylesheet" type="text/css" href="js/jquery-easyui-1.4.1/themes/default/easyui.css"/>
+    <link rel="stylesheet" type="text/css" href="js/jquery-easyui-1.4.1/themes/icon.css"/>
+    <link rel="stylesheet" type="text/css" href="css/taotao.css"/>
+    <script type="text/javascript" src="js/jquery-easyui-1.4.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/jquery-easyui-1.4.1/jquery.easyui.min.js"></script>
+    <script type="text/javascript" src="js/jquery-easyui-1.4.1/locale/easyui-lang-zh_CN.js"></script>
+    <script type="text/javascript" src="js/common.js"></script>
+
+    <style type="text/css">
+        .content {
+            padding: 10px 10px 10px 10px;
+        }
+    </style>
 </head>
 <!--  easyUI布局插件 -->
 <body class="easyui-layout">
-	<!--  布局的左侧是一个easyUI树插件，id为menu -->
-	<!--  树支持内置的异步加载模式，因此用户可以创建一个空的树，然后指定一个动态返回 JSON 数据的接口，用于根据需求异步填充树 -->
-    <div data-options="region:'west',title:'菜单',split:true" style="width:180px;">
-    	<ul id="menu" class="easyui-tree" style="margin-top: 10px;margin-left: 5px;">
-         	<li>
-         		<span>商品管理</span>
-         		<ul>
-					<!--  树节点的自定义属性 -->
-	         		<li data-options="attributes:{'url':'item-add'}">新增商品</li>
-	         		<li data-options="attributes:{'url':'item-list'}">查询商品</li>
-	         		<li data-options="attributes:{'url':'item-param-list'}">规格参数</li>
-	         	</ul>
-         	</li>
-         	<li>
-         		<span>网站内容管理</span>
-         		<ul>
-	         		<li data-options="attributes:{'url':'content-category'}">内容分类管理</li>
-	         		<li data-options="attributes:{'url':'content'}">内容管理</li>
-	         	</ul>
-         	</li>
-         </ul>
-    </div>
-	<!--  布局的中间是一个easyUI的标签页插件，id为tabs -->
-	<!--  每个标签页通过标签页插件的子 <div> 被创建 -->
-    <div data-options="region:'center',title:''">
-    	<div id="tabs" class="easyui-tabs">
-		    <div title="首页" style="padding:20px;">
-		        	
-		    </div>
-		</div>
-    </div>
-    
+<!--  页面加载时添加粒子效果 -->
 <script type="text/javascript">
-$(function(){
-	//给树添加点击事件
-	$('#menu').tree({
-		onClick: function(node){
-			//如果选中的节点是叶子节点
-			if($('#menu').tree("isLeaf",node.target)){
-				//根据节点名查找标签页
-				var tabs = $("#tabs");
-				var tab = tabs.tabs("getTab",node.text);
-				if(tab){
-					//如果能够查找到标签页，就选中它
-					tabs.tabs("select",node.text);
-				}else{
-					//如果标签页不存在，就新建一个，标签页的title为节点名，根据自定义属性的url发送异步请求（获取html渲染标签页）
-					tabs.tabs('add',{
-					    title:node.text,
-					    href: node.attributes.url,
-					    closable:true,
-					    bodyCls:"content"
-					});
-				}
-			}
-		}
-	});
-});
+    window.onload = function () {
+        var config = {
+            vx: 4,
+            vy: 4,
+            height: 2,
+            width: 2,
+            count: 100,
+            color: "121, 162, 185",
+            stroke: "100,200,180",
+            dist: 6000,
+            e_dist: 20000,
+            max_conn: 10
+        };
+        CanvasParticle(config);
+    };
+</script>
+<script type="text/javascript" src="js/canvas-particle.js"></script>
+<!--  布局的左侧是一个easyUI树插件，id为menu -->
+<!--  树支持内置的异步加载模式，因此用户可以创建一个空的树，然后指定一个动态返回 JSON 数据的接口，用于根据需求异步填充树 -->
+<div data-options="region:'west',title:'菜单',split:true" style="width:180px;">
+    <ul id="menu" class="easyui-tree" style="margin-top: 10px;margin-left: 5px;">
+        <li>
+            <span>商品管理</span>
+            <ul>
+                <!--  树节点的自定义属性 -->
+                <li data-options="attributes:{'url':'item-add'}">新增商品</li>
+                <li data-options="attributes:{'url':'item-list'}">查询商品</li>
+                <li data-options="attributes:{'url':'item-param-list'}">规格参数</li>
+            </ul>
+        </li>
+        <li>
+            <span>网站内容管理</span>
+            <ul>
+                <li data-options="attributes:{'url':'content-category'}">内容分类管理</li>
+                <li data-options="attributes:{'url':'content'}">内容管理</li>
+            </ul>
+        </li>
+    </ul>
+</div>
+<!--  布局的中间是一个easyUI的标签页插件，id为tabs -->
+<!--  每个标签页通过标签页插件的子 <div> 被创建 -->
+<div data-options="region:'center',title:''">
+    <div id="tabs" class="easyui-tabs">
+        <div title="首页" style="padding:20px;">
+
+        </div>
+    </div>
+</div>
+
+<script type="text/javascript">
+    $(function () {
+        //给树添加点击事件
+        $('#menu').tree({
+            onClick: function (node) {
+                //如果选中的节点是叶子节点
+                if ($('#menu').tree("isLeaf", node.target)) {
+                    //根据节点名查找标签页
+                    var tabs = $("#tabs");
+                    var tab = tabs.tabs("getTab", node.text);
+                    if (tab) {
+                        //如果能够查找到标签页，就选中它
+                        tabs.tabs("select", node.text);
+                    } else {
+                        //如果标签页不存在，就新建一个，标签页的title为节点名，根据自定义属性的url发送异步请求（获取html渲染标签页）
+                        tabs.tabs('add', {
+                            title: node.text,
+                            href: node.attributes.url,
+                            closable: true,
+                            bodyCls: "content"
+                        });
+                    }
+                }
+            }
+        });
+    });
 </script>
 </body>
 </html>
